fixes: hidden because rotated content be overflowing and 12pt because the root font size was never set

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 .month {
   color: white;
   -webkit-text-stroke: 1px black;
-  font-size: 1.1em;
+  font-size: 12pt;
   font-weight: 900;
   text-transform: uppercase;
   position: absolute;
